--- a/MyMvcProject.csproj
+++ b/MyMvcProject.csproj
@@ -24,4 +24,12 @@
     <None Include="wwwroot\js\main.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+	  <Reference Include="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35, processorArchitecture=MSIL" />
+
+
+  </ItemGroup>
+	
 </Project>
